--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.8.4",
+    "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^3.0.2",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "react-table": "^6.9.2"
